fix: changed colors and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ button {
 }
 
 button:hover {
-  background-color: rgb(101, 181, 231);
+  background-color: rgb(150, 191, 72);
 }
 
 button:active {
